# ntpu-dsp-homework4

./: CMakeLists.txt  Makefile  README.md  main.c
output/: lpf.csv
plot/: main.py  requirements.test.txt  requirements.txt  test.m  test.py
src/: fft.c  fft.h  filter.c  filter.h  resample.c  resample.h  test.c  wav_file.c  wav_file.h
